# droppy

./: README.md
client/: CNAME  README.md  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.js
client/src/components/: HomeComponent.js  ViewComponent.js
client/src/constants/: API_URL.js  APP_URL.js
server/: Cargo.toml  Dockerfile  Makefile
server/src/: app.rs  buckets.rs  db.rs  main.rs  tokenize.rs
